# LocalMindAI

./: .env.example  .gitignore  LICENSE  Makefile  README.hackathon.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: automation.py  dashboard.py  documents.py  exports.py  images.py  knowledge.py  models.py  search.py  settings.py  system.py  voice.py  workspace.py
backend/app/core/: __init__.py  config.py  config.py.save  dependencies.py  logging.py
backend/app/db/: __init__.py  database.py  models.py
backend/app/repositories/: __init__.py  action_repo.py  base.py  document_repo.py  export_repo.py  image_repo.py  note_repo.py  setting_repo.py
backend/app/schemas/: automation.py  common.py  documents.py  exports.py  images.py  knowledge.py  models.py  search.py  settings.py  system.py  voice.py  workspace.py
backend/app/services/: automation_service.py  document_service.py  embedding_service.py  export_service.py  image_service.py  knowledge_service.py  ollama_service.py  search_service.py  settings_service.py  system_service.py  voice_service.py  workspace_service.py
backend/tests/: test_health.py  test_workspace.py
docker/: README.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  DEMO_SCRIPT.md  DEPLOYMENT.md  DEVELOPER.md  FOLDER_STRUCTURE.md  INSTALLATION.md  PRESENTATION_OUTLINE.md  ROADMAP.md  TESTING.md  openapi.yaml
frontend/: Dockerfile  package-lock.json  package.json  (+1 more)
(+59 files in other folders)
