[project]
name = "localmind-backend"
version = "1.0.0"
description = "Privacy-first offline AI workspace backend (FastAPI + Ollama)."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["B008"]  # FastAPI uses function calls (Depends/File/Form) in defaults.

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
